--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -11,7 +11,12 @@
   align-items: center;
   z-index: 1000;
 }
-
+.user-greeting{
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  margin-right: 15px;
+}
 .navlinks {
   display: flex;
   flex-direction: row;
